; ModuleID = '/home/carl/AnghaBench/git/extr_wt-status.c_short_submodule_status.c'
source_filename = "/home/carl/AnghaBench/git/extr_wt-status.c_short_submodule_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wt_status_change_data = type { i32, i8, i64 }

@DIRTY_SUBMODULE_MODIFIED = common dso_local global i32 0, align 4
@DIRTY_SUBMODULE_UNTRACKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (%struct.wt_status_change_data*)* @short_submodule_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @short_submodule_status(%struct.wt_status_change_data* %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca %struct.wt_status_change_data*, align 8
  store %struct.wt_status_change_data* %0, %struct.wt_status_change_data** %3, align 8
  %4 = load %struct.wt_status_change_data*, %struct.wt_status_change_data** %3, align 8
  %5 = getelementptr inbounds %struct.wt_status_change_data, %struct.wt_status_change_data* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8 77, i8* %2, align 1
  br label %29

9:                                                ; preds = %1
  %10 = load %struct.wt_status_change_data*, %struct.wt_status_change_data** %3, align 8
  %11 = getelementptr inbounds %struct.wt_status_change_data, %struct.wt_status_change_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @DIRTY_SUBMODULE_MODIFIED, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  store i8 109, i8* %2, align 1
  br label %29

17:                                               ; preds = %9
  %18 = load %struct.wt_status_change_data*, %struct.wt_status_change_data** %3, align 8
  %19 = getelementptr inbounds %struct.wt_status_change_data, %struct.wt_status_change_data* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @DIRTY_SUBMODULE_UNTRACKED, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  store i8 63, i8* %2, align 1
  br label %29

25:                                               ; preds = %17
  %26 = load %struct.wt_status_change_data*, %struct.wt_status_change_data** %3, align 8
  %27 = getelementptr inbounds %struct.wt_status_change_data, %struct.wt_status_change_data* %26, i32 0, i32 1
  %28 = load i8, i8* %27, align 4
  store i8 %28, i8* %2, align 1
  br label %29

29:                                               ; preds = %25, %24, %16, %8
  %30 = load i8, i8* %2, align 1
  ret i8 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
